# KYC

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
docker/develop/: entrypoint.sh  scheduler-entrypoint.sh  worker-entrypoint.sh
docker/develop/postgres/db_data/: postmaster.pid
docker/develop/postgres/db_data/global/: 1136_vm  1137  1213_vm  1214  1214_vm  1232  1233  1260  1260_vm  1261  1261_vm  1262  2396  2396_vm  2397  2671  2672  2676  2677  2694  2695  2697  2698  2847  2965  2967  3593  4061  6002  6114  pg_control  pg_internal.init
src/client/: admin.py  authentication.py  models.py
src/client/api/v1/: serializers.py  urls.py  views.py
src/client/migrations/: 0001_initial.py
src/core/: celery.py  settings.py  urls.py
src/kyc/: abstract.py  admin.py  constants.py  models.py
src/kyc/api/v1/: serializers.py  urls.py  views.py
src/kyc/bvn/: admin.py  constants.py  models.py  utils.py
src/kyc/bvn/api/v1/: serializers.py  urls.py  (+1 more)
src/kyc/bvn/managers/: base.py  my_identity_pass.py  smile_identity.py  verifyme.py
src/kyc/bvn/migrations/: 0001_initial.py  0002_alter_bvnverification_provider.py
src/kyc/migrations/: 0001_initial.py  0002_alter_clientproviderapikey_api_key.py  0003_alter_clientproviderapikey_provider.py
src/lib/: utils.py
src/utilities/: admin.py  models.py  tasks.py
src/utilities/migrations/: 0001_initial.py
tests/python/: testutils.py
tests/python/client/: test_models.py
tests/python/kyc/: test_models.py
tests/python/kyc/bvn/: test_models.py  test_views.py
(+291 files in other folders)
